# proxy-manager

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: config.toml  example1.rs
src/: config.rs  main.rs  server_config.rs  utils.rs
tests/keys/: self_signed_cert.sh
tests/keys/abc.zennozenith.com/: key.pem  server.crt
tests/keys/pqr.zennozenith.com/: key.pem  server.crt
